@startuml UML_Class_Diagram
skinparam classFontSize 11
skinparam classBackgroundColor beige
skinparam ClassBorderColor red
skinparam ArrowColor red


package "models" <<frame>> {
    class "Answer" {
        - id: Long
        - response: Response
        - question: Long
        - content: String
        + Answer(response: Response, Long question, content: String)
        + getId(): Long
        + getResponse(): Response
        + getQuestion(): Long
        + getContent(): String
        + setId(id: Long): void
        + setResponse(response: Response): void
        + setQuestion(question: Question): void
        + setContent(content: String): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "AppUser" {
        - username: String
        - password: String
        - listSurveys: List<Survey>
        - responses: List<Long>
        + AppUser(username: String, password: String)
        + getUsername(): String
        + getPassword(): String
        + getListSurveys(): List<Survey>
        + getResponses(): List<Long>
        + setUsername(username: String): void
        + setPassword(password: String): void
        + setListSurveys(listSurveys: List<Survey>): void
        + setResponses(responses: List<Long>): void
        + addSurvey(survey: Survey): void
        + removeSurvey(surveyId: Long): boolean
        + addResponse(response: Long): void
        + removeResponse(response: Long): boolean
        + toString(): String
        + equals(o: Object): boolean
    }

    enum "QuestionType" {
        LONG_ANSWER("Long Answer")
        RADIO_CHOICE("Radio Choice")
        RANGE("Range")
        - type: String {readonly}
        + QuestionType(type: String)
        + getType(): String
        + setType(type: String): void
    }

    class "Question" {
        - id: Long
        - prompt: String
        - type: QuestionType
        - survey: Survey
        + Question(survey: Survey, prompt: String, type: QuestionType)
        + getId(): Long
        + getPrompt(): String
        + getType(): QuestionType
        + getSurvey(): Survey
        + setId(id: Long): void
        + setPrompt(prompt: String): void
        + setType(type: QuestionType): void
        + setSurvey(survey: Survey): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "LongAnswerQuestion" {
        - charLimit: Integer
        + LongAnswerQuestion()
        + LongAnswerQuestion(survey: Survey, prompt: String, charLimit: Integer)
        + getCharLimit(): Integer
        + setCharLimit(charLimit: Integer): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "RadioChoiceQuestion" {
        - choices: String[]
        + RadioChoiceQuestion()
        + RadioChoiceQuestion(survey: Survey, prompt: String, choices: String[])
        + getChoices(): String[]
        + setChoices(choices: String[]): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "RangeQuestion" {
        - lower: Integer
        - upper: Integer
        - incremental: Integer
        + RangeQuestion()
        + RangeQuestion(prompt: String, lower: Integer, upper: Integer)
        + RangeQuestion(survey: Survey, prompt: String, lower: Integer, upper: Integer, increment: Integer)
        + getLower(): Integer
        + getUpper(): Integer
        + getIncremental(): Integer
        + setLower(lower: Integer): void
        + setUpper(upper: Integer): void
        + setIncremental(incremental: Integer): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "Response" {
        - id: Long
        - survey: Survey
        - answers: List<Answer>
        + Response(survey: Survey)
        + getId(): Long
        + getSurvey(): Survey
        + getAnswers(): List<Answer>
        + setId(id: Long): void
        + setSurvey(survey: Survey): void
        + setAnswers(answers: List<Answer>): void
        + addAnswer(question: Long, content: String): void
        + toString(): String
        + equals(o: Object): boolean
    }

    class "Survey" {
        - id: Long
        - questions: List<Question>
        - responses: List<Response>
        - closed: boolean
        - title: String
        - user: AppUser
        + Survey(user: AppUser, title: String)
        + getId(): Long
        + getQuestions(): List<Question>
        + getResponses(): List<Response>
        + isClosed(): boolean
        + getTitle(): String
        + getUser(): AppUser
        + setId(id: Long): void
        + setQuestions(questions: List<Question>): void
        + setResponses(responses: List<Response>): void
        + setClosed(closed: boolean): void
        + setTitle(title: String): void
        + setUser(user: AppUser): void
        + addQuestion(question: Question): boolean
        + removeQuestion(questionId: long): boolean
        + addResponse(response: Response): boolean
        + removeResponse(responseId: Long): boolean
        + getResponsesForQuestion(questionId: Long): List<String>
        + toString(): String
        + equals(o: Object): boolean
    }
}

' Relationship arrows
"RangeQuestion" -up-|> "Question"
"LongAnswerQuestion" -up-|> "Question"
"RadioChoiceQuestion" -up-|> "Question"

"Question" "1" *-- "QuestionType"

"Response" "0..*  " *-- "1      " "Answer"
"Survey" "0..*  " *-- "1  " "Question"
"Survey" "0..*     " *-- "1   " "Response"
"AppUser" "0..*  " *-- "1 " "Survey"
@enduml